# decomp_settings

./: .gitignore  Cargo.toml  README.md  decomp_settings.pyi  pyproject.toml
.github/scripts/: ci_check_wheel.ps1  ci_check_wheel.sh
.github/workflows/: maturin.yml  python.yml  rust.yml  rust_release.yml
src/: config.rs  error.rs  lib.rs
test/: arbitrary_tool.yaml  decomp.yaml  test_python.py
