[package]
name = "decomp_settings"
version = "0.0.6"
edition = "2021"
authors = ["Ethan Roseman <ethteck@gmail.com>"]
description = "Library for reading the decomp.yaml settings file"
readme = "README.md"
repository = "https://github.com/ethteck/decomp_settings"
license = "MIT"

[lib]
name = "decomp_settings"
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.63"
pyo3 = { version = "0.22.2", features = ["extension-module"], optional = true }

[features]
python_bindings = ["dep:pyo3"]