[package]
name = "decomp_settings"
version = "0.0.9"
edition = "2024"
authors = ["Ethan Roseman <ethteck@gmail.com>"]
description = "Library for reading the decomp.yaml settings file"
readme = "README.md"
repository = "https://github.com/ethteck/decomp_settings"
license = "MIT OR Apache-2.0"

[lib]
name = "decomp_settings"
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2"
pyo3 = { version = "0.25.0", features = ["extension-module"], optional = true }

[features]
python_bindings = ["dep:pyo3"]
