[project]
name = "decomp_settings"
# Version should be synced with lib/Cargo.toml
version = "0.0.2"
description = "A library for reading the decomp.yaml settings file"
requires-python = ">=3.9"
dependencies = [
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
"Homepage" = "https://github.com/ethteck/decomp_settings"
"Bug Tracker" = "https://github.com/ethteck/decomp_settings/issues"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "python_bindings"]